k8s/infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.k8s.thelabdesk.com
      secretName: wildcard-k8s-tls
  rules:
    - host: argocd.k8s.thelabdesk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
